# polka

./: .codespellrc  .editorconfig  .pre-commit-config.yaml  Cargo.toml  LICENSE  Makefile  README.md
examples/: icon.md  main.rs
examples/block_attrs/: atx_heading.md  html_block.md  list.md  listitem.md  nested_list.md  nested_list_cls.md  paragraph.md  setext_heading.md  thematic_break.md
src/: attrs.rs  icon.rs  intern.rs  jotdown_attr.rs  lib.rs  rules.rs  span.rs  sup_sub.rs  utils.rs
src/rules/: core.rs  html.rs  inline.rs
src/rules/core/: attrs.rs  utils.rs
src/rules/html/: utils.rs  validator.rs
src/rules/html/utils/: tokensink.rs
src/rules/html/utils/tokensink/: find_nth_tag_tests.rs  process_token_tests.rs
src/rules/html/validator/: validate_tag_nesting_tests.rs  validate_tests.rs
src/rules/inline/: icon.rs  span.rs  sup_sub.rs
tests/: main.rs  test_block.rs  test_icon.rs  test_inline.rs
