[package]
name = "polka"
version = "0.0.0"
edition = "2024"

[lib]
doctest = false

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

[dependencies]
indexmap = "2.13.0"
# jotdown = "0.9.1" # Copied (and modified a bit) its state machine instead: src/jotdown_attrs.rs
markdown-it = "0.6.1"
quick-xml = "0.39.2"

[dev-dependencies]
clap = { version = "4", features = ["derive"] }
tempfile = "3"
